programs/2-typecheck/invalid/example/2-1-vardecl.go
// invalid assignment: x is of type rune
package test

func init() {
	var x = 'a'
	x = 3
}